--- a/ReduxTodoApp/package.json
+++ b/ReduxTodoApp/package.json
@@ -13,6 +13,7 @@
     "jest": "^0.1.40",
     "object-assign": "^4.0.1",
     "react": "^0.14.5",
+    "react-addons-test-utils": "^0.14.6",
     "react-dom": "^0.14.5",
     "react-redux": "^4.0.6",
     "react-router": "^1.0.3",
@@ -21,7 +22,9 @@
   "jest": {
     "unmockedModulePathPatterns": [
       "<rootDir>/node_modules/react",
-      "<rootDir>/node_modules/fbjs"
+      "<rootDir>/node_modules/fbjs",
+      "<rootDir>/node_modules/redux",
+      "<rootDir>/node_modules/object-assign"
     ]
   }
 }
